libcimgui/generator_output/cimgui.h

//-----------------------------------------------------------------------------
// [SECTION] Forward declarations and basic types
//-----------------------------------------------------------------------------

// Auto-generated forward declarations for C header
typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImVector_ImDrawCmd_t ImVector_ImDrawCmd;
typedef struct ImVector_ImDrawIdx_t ImVector_ImDrawIdx;
typedef struct ImVector_ImDrawChannel_t ImVector_ImDrawChannel;
typedef struct ImVector_ImDrawVert_t ImVector_ImDrawVert;
typedef struct ImVector_ImVec4_t ImVector_ImVec4;
typedef struct ImVector_ImTextureID_t ImVector_ImTextureID;
typedef struct ImVector_ImVec2_t ImVector_ImVec2;
typedef struct ImVector_ImDrawListPtr_t ImVector_ImDrawListPtr;
typedef struct ImDrawCmdHeader_t ImDrawCmdHeader;
// Forward declarations
typedef struct ImDrawChannel_t ImDrawChannel;                            // Temporary storage to output draw commands out of order, used by ImDrawListSplitter and ImDrawList::ChannelsSplit()
typedef struct ImDrawCmd_t ImDrawCmd;                                    // A single draw command within a parent ImDrawList (generally maps to 1 GPU draw call, unless it is a callback)
typedef struct ImDrawList_t ImDrawList;                                  // A single draw command list (generally one per window, conceptually you may see this as a dynamic "mesh" builder)
typedef struct ImDrawListSharedData_t ImDrawListSharedData;              // Data shared among multiple draw lists (typically owned by parent ImGui context, but you may create one yourself)
typedef struct ImDrawListSplitter_t ImDrawListSplitter;                  // Helper to split a draw list into different layers which can be drawn into out of order, then flattened back.
typedef struct ImDrawVert_t ImDrawVert;                                  // A single vertex (pos + uv + col = 20 bytes by default. Override layout with IMGUI_OVERRIDE_DRAWVERT_STRUCT_LAYOUT)
typedef int ImDrawListFlags;        // -> enum ImDrawListFlags_      // Flags: for ImDrawList instance
typedef void* ImTextureID;  // Default: store a pointer or an integer fitting in a pointer (most renderer backends are ok with that)
typedef unsigned short ImDrawIdx;  // Default: 16-bit (for maximum compatibility with renderer backends)
typedef unsigned int ImU32;        // 32-bit unsigned integer (often used to store packed colors)
// ImVec2: 2D vector used to store positions, sizes etc. [Compile-time configurable type]
// This is a frequently used type in the API. Consider using IM_VEC2_CLASS_EXTRA to create implicit cast from/to our preferred type.
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t
{
    float x, y;
} ImVec2;
// ImVec4: 4D vector used to store clipping rectangles, colors etc. [Compile-time configurable type]
typedef struct ImVec4_t
{
    float x, y, z, w;
} ImVec4;
// Instantiation of ImVector<ImDrawCmd>

typedef struct ImVector_ImDrawCmd_t
{
    int        Size;
    int        Capacity;
    ImDrawCmd* Data;
} ImVector_ImDrawCmd;
// Instantiation of ImVector<ImDrawIdx>

typedef struct ImVector_ImDrawIdx_t
{
    int        Size;
    int        Capacity;
    ImDrawIdx* Data;
} ImVector_ImDrawIdx;
// Instantiation of ImVector<ImDrawChannel>

typedef struct ImVector_ImDrawChannel_t
{
    int            Size;
    int            Capacity;
    ImDrawChannel* Data;
} ImVector_ImDrawChannel;
// Instantiation of ImVector<ImDrawVert>

typedef struct ImVector_ImDrawVert_t
{
    int         Size;
    int         Capacity;
    ImDrawVert* Data;
} ImVector_ImDrawVert;
// Instantiation of ImVector<ImVec4>

typedef struct ImVector_ImVec4_t
{
    int     Size;
    int     Capacity;
    ImVec4* Data;
} ImVector_ImVec4;
// Instantiation of ImVector<ImTextureID>

typedef struct ImVector_ImTextureID_t
{
    int          Size;
    int          Capacity;
    ImTextureID* Data;
} ImVector_ImTextureID;
// Instantiation of ImVector<ImVec2>

typedef struct ImVector_ImVec2_t
{
    int     Size;
    int     Capacity;
    ImVec2* Data;
} ImVector_ImVec2;
// Instantiation of ImVector<ImDrawList*>

typedef struct ImVector_ImDrawListPtr_t
{
    int          Size;
    int          Capacity;
    ImDrawList** Data;
} ImVector_ImDrawListPtr;
typedef void (*ImDrawCallback)(const ImDrawList* parent_list, const ImDrawCmd* cmd);
// Typically, 1 command = 1 GPU draw call (unless command is a callback)
// - VtxOffset: When 'io.BackendFlags & ImGuiBackendFlags_RendererHasVtxOffset' is enabled,
//   this fields allow us to render meshes larger than 64K vertices while keeping 16-bit indices.
//   Backends made for <1.71. will typically ignore the VtxOffset fields.
// - The ClipRect/TextureId/VtxOffset fields must be contiguous as we memcmp() them together (this is asserted for).
typedef struct ImDrawCmd_t
{
    ImVec4         ClipRect;          // 4*4  // Clipping rectangle (x1, y1, x2, y2). Subtract ImDrawData->DisplayPos to get clipping rectangle in "viewport" coordinates
    ImTextureID    TextureId;         // 4-8  // User-provided texture ID. Set by user in ImfontAtlas::SetTexID() for fonts or passed to Image*() functions. Ignore if never using images or multiple fonts atlas.
    unsigned int   VtxOffset;         // 4    // Start offset in vertex buffer. ImGuiBackendFlags_RendererHasVtxOffset: always 0, otherwise may be >0 to support meshes larger than 64K vertices with 16-bit indices.
    unsigned int   IdxOffset;         // 4    // Start offset in index buffer.
    unsigned int   ElemCount;         // 4    // Number of indices (multiple of 3) to be rendered as triangles. Vertices are stored in the callee ImDrawList's vtx_buffer[] array, indices in idx_buffer[].
    ImDrawCallback UserCallback;      // 4-8  // If != NULL, call the function instead of rendering the vertices. clip_rect and texture_id will be set normally.
    void*          UserCallbackData;  // 4-8  // The draw callback code can access this.
} ImDrawCmd;
typedef struct ImDrawVert_t
{
    ImVec2 pos;
    ImVec2 uv;
    ImU32  col;
} ImDrawVert;
// [Internal] For use by ImDrawList
typedef struct ImDrawCmdHeader_t
{
    ImVec4       ClipRect;
    ImTextureID  TextureId;
    unsigned int VtxOffset;
} ImDrawCmdHeader;
// [Internal] For use by ImDrawListSplitter
typedef struct ImDrawChannel_t
{
    ImVector_ImDrawCmd _CmdBuffer;
    ImVector_ImDrawIdx _IdxBuffer;
} ImDrawChannel;
// Split/Merge functions are used to split the draw list into different layers which can be drawn into out of order.
// This is used by the Columns/Tables API, so items of each column can be batched together in a same draw call.
typedef struct ImDrawListSplitter_t
{
    int                    _Current;   // Current channel number (0)
    int                    _Count;     // Number of active channels (1+)
    ImVector_ImDrawChannel _Channels;  // Draw channels (not resized down so _Count might be < Channels.Size)
} ImDrawListSplitter;
// Draw command list
// This is the low-level list of polygons that ImGui:: functions are filling. At the end of the frame,
// all command lists are passed to your ImGuiIO::RenderDrawListFn function for rendering.
// Each dear imgui window contains its own ImDrawList. You can use ImGui::GetWindowDrawList() to
// access the current window draw list and draw custom primitives.
// You can interleave normal ImGui:: calls and adding primitives to the current draw list.
// In single viewport mode, top-left is == GetMainViewport()->Pos (generally 0,0), bottom-right is == GetMainViewport()->Pos+Size (generally io.DisplaySize).
// You are totally free to apply whatever transformation matrix to want to the data (depending on the use of the transformation you may want to apply it to ClipRect as well!)
// Important: Primitives are always added to the list and not culled (culling is done at higher-level by ImGui:: functions), if you use this API a lot consider coarse culling your drawn objects.
typedef struct ImDrawList_t
{
    // This is what you have to render
    ImVector_ImDrawCmd    CmdBuffer;        // Draw commands. Typically 1 command = 1 GPU draw call, unless the command is a callback.
    ImVector_ImDrawIdx    IdxBuffer;        // Index buffer. Each command consume ImDrawCmd::ElemCount of those
    ImVector_ImDrawVert   VtxBuffer;        // Vertex buffer.
    ImDrawListFlags       Flags;            // Flags, you may poke into these to adjust anti-aliasing settings per-primitive.

    // [Internal, used while building lists]
    unsigned int          _VtxCurrentIdx;   // [Internal] generally == VtxBuffer.Size unless we are past 64K vertices, in which case this gets reset to 0.
    ImDrawListSharedData* _Data;            // Pointer to shared draw data (you can use ImGui::GetDrawListSharedData() to get the one from current ImGui context)
    const char*           _OwnerName;       // Pointer to owner window's name for debugging
    ImDrawVert*           _VtxWritePtr;     // [Internal] point within VtxBuffer.Data after each add command (to avoid using the ImVector<> operators too much)
    ImDrawIdx*            _IdxWritePtr;     // [Internal] point within IdxBuffer.Data after each add command (to avoid using the ImVector<> operators too much)
    ImVector_ImVec4       _ClipRectStack;   // [Internal]
    ImVector_ImTextureID  _TextureIdStack;  // [Internal]
    ImVector_ImVec2       _Path;            // [Internal] current path building
    ImDrawCmdHeader       _CmdHeader;       // [Internal] template of active commands. Fields should match those of CmdBuffer.back().
    ImDrawListSplitter    _Splitter;        // [Internal] for channels api (note: prefer using your own persistent instance of ImDrawListSplitter!)
    float                 _FringeScale;     // [Internal] anti-alias fringe is scaled by this value, this helps to keep things sharp while zooming at vertex buffer content

    // Obsolete names
    //inline  void  AddBezierCurve(const ImVec2& p1, const ImVec2& p2, const ImVec2& p3, const ImVec2& p4, ImU32 col, float thickness, int num_segments = 0) { AddBezierCubic(p1, p2, p3, p4, col, thickness, num_segments); } // OBSOLETED in 1.80 (Jan 2021)
    //inline  void  PathBezierCurveTo(const ImVec2& p2, const ImVec2& p3, const ImVec2& p4, int num_segments = 0) { PathBezierCubicCurveTo(p2, p3, p4, num_segments); } // OBSOLETED in 1.80 (Jan 2021)
} ImDrawList;